--- a/llamaindex/knowledgegraphindex-chatbot-streamlit/requirements.txt
+++ b/llamaindex/knowledgegraphindex-chatbot-streamlit/requirements.txt
@@ -41,13 +41,13 @@ jmespath==1.0.1
 joblib==1.3.2
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
-llama-index-core==0.10.26
-llama-index-embeddings-bedrock==0.1.4
-llama-index-graph-stores-neptune==0.1.3
-llama-index-llms-anthropic==0.1.7
-llama-index-llms-bedrock==0.1.5
-llama-index-readers-web==0.1.7
-llamaindex-py-client==0.1.15
+llama-index-core>=0.10.26
+llama-index-embeddings-bedrock>=0.1.4
+llama-index-graph-stores-neptune>=0.1.3
+llama-index-llms-anthropic>=0.1.7
+llama-index-llms-bedrock>=0.1.5
+llama-index-readers-web>=0.1.7
+llamaindex-py-client>=0.1.15
 lxml==5.2.1
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
